E-19829: Update Gradle Test file